アプリ変更

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                   />
                   <!-- Portfolio Modal - Text-->
                   <p class="mb-4">
-                    LINEのトーク画面から、名刺の画像を送信するだけで簡単に名刺を管理できるサービスです。画像のOCR処理、自然言語処理技術を用いたbotで、自然な会話でデータを管理できます。Excel・スプレッドシートとアプリケーションの連携を簡単に行うことができます。
+                    LINEのトーク画面から、名刺の画像を送信するだけで簡単に名刺を管理できるサービスです。画像のOCR処理、自然言語処理技術を用いたbotで、自然な会話で画像データを管理できます。Excel・スプレッドシートとアプリケーションの連携を簡単に行うことができます。
                   </p>
                   <button class="btn btn-primary" data-bs-dismiss="modal">
                     <i class="fas fa-xmark fa-fw"></i>
